assets/styles/components/header.scss
.header{
    position: fixed;
    left: 0px;
    top: 0px;
    z-index: 3;
    width: 100%;
    padding: 1.5rem 0px;
    background: $header-background-color;
    color: color-yiq($header-background-color);

    .header-listing{
        @include normalize-listing;
        display: grid;
        grid-template-columns: 1fr auto;
        grid-template-rows: auto;
    }

    a{
        display: block;
        height: 40px;
        color: transparent;

        &.login-link{
            width: 140px;
            text-indent: -9999px;
            background: url('/images/scientilla-logo-white-40.png') no-repeat;
        }

        &.iit-link{
            img{
                height: 40px;
                width: auto;
            }
        }
    }
}

